--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingStart="20dp"
@@ -21,11 +22,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Username"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="40dp"
+        android:textColorHint="@color/white"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/quantum_purple700"
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -35,9 +40,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
+        android:textColorHint="@color/white"
         android:layout_marginTop="40dp">
         <com.google.android.material.textfield.TextInputEditText
             android:inputType="textPassword"
+            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -56,6 +63,7 @@
             android:layout_gravity="left"
             android:layout_marginTop="60dp"
             android:layout_marginRight="100dp"
+            android:textColor="@color/white"
             android:text="@string/login" />
 
         <Button
@@ -63,6 +71,7 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:layout_gravity="left"
             android:text="@string/go_to_sign_in" />
     </LinearLayout>
