--- a/app/src/main/res/layout/password_update_activity.xml
+++ b/app/src/main/res/layout/password_update_activity.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/background"
     android:orientation="vertical"
     android:paddingStart="20dp"
     android:paddingEnd="20dp">
@@ -22,10 +23,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Old password"
+        android:textColorHint="@color/white"
         android:layout_marginTop="40dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:inputType="textPassword"
+            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -37,9 +40,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="New password"
+        android:textColorHint="@color/white"
         android:layout_marginTop="40dp">
         <com.google.android.material.textfield.TextInputEditText
             android:inputType="textPassword"
+            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -51,9 +56,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Confirm password"
+        android:textColorHint="@color/white"
         android:layout_marginTop="40dp">
         <com.google.android.material.textfield.TextInputEditText
             android:inputType="textPassword"
+            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
