--- a/app/src/main/res/layout/splashscreen_activity.xml
+++ b/app/src/main/res/layout/splashscreen_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/_7450">
+    android:background="@drawable/background">
 
     <TextView
         android:layout_width="match_parent"
