--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -50,7 +50,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="0.5"
             android:text="Admin Only"
-            android:visibility="invisible"/>
+            android:visibility="visible" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
